[tool.poetry]
name = "orderful-dashboard-searcher"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
pydantic = "^1.10.2"
jsonpath-ng = "^1.5.3"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
fastapi = "^0.94.1"
pytest-asyncio = "^0.20.3"

[tool.poetry.dev-dependencies]
ruff = "^0.0.256"
pre-commit = "^3.1.1"
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "..."]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".cach",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 100

# Assume Python 3.11.
target-version = "py311"

[tool.ruff.mccabe]
max-complexity = 10